--- a/page3.html
+++ b/page3.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="normalize.css">
     <!-- Замініть на reset.css для порівняння -->
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Додатковий CSS для видалення кульок у списку */
+        ul {
+            list-style-type: none;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -22,7 +28,10 @@
         </nav>
     </header>
     <main>
-        <p>Ця сторінка використовує <code>normalize.css</code> для уніфікації стилів. Спробуйте замінити на <code>reset.css</code> і порівняйте результати. Нормалізація зберігає базові стилі, а скидання їх скидає.</p>
+        <ul>
+            <li><a href="normalize_example.html">Приклад із normalize.css</a></li>
+            <li><a href="reset_example.html">Приклад із reset.css</a></li>
+        </ul>
     </main>
     <footer>
         <p>© 2025 Мій навчальний сайт</p>
