--- a/page1.html
+++ b/page1.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Створення Посилань</title>
+    <title>Головна сторінка</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Створення Посилань</h1>
+        <h1>Головна сторінка</h1>
         <nav>
-            <a href="page1.html">Посилання</a> |
+            <a href="page1.html">Головна</a> |
             <a href="page2.html">Блочні/Інлайн</a> |
             <a href="page3.html">Нормалізація</a> |
             <a href="page4.html">Властивості</a> |
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <p>Ця сторінка демонструє створення посилань на HTML-сторінках. Наприклад, натискайте на посилання в навігації для переходу між сторінками.</p>
+        <h1>Ця сторінка Войтенка Вадима РПЗ-14.</h1>
     </main>
     <footer>
         <p>© 2025 Мій навчальний сайт</p>
