--- a/page4.html
+++ b/page4.html
@@ -34,7 +34,7 @@
     <header>
         <h1>CSS Властивості</h1>
         <nav>
-            <a href="page1.html">Посилання</a> |
+            <a href="page1.html">Головна</a> |
             <a href="page2.html">Блочні/Інлайн</a> |
             <a href="page3.html">Нормалізація</a> |
             <a href="page4.html">Властивості</a> |
