--- a/page3.html
+++ b/page3.html
@@ -18,7 +18,7 @@
     <header>
         <h1>Нормалізація/Скидання Стилів</h1>
         <nav>
-            <a href="page1.html">Посилання</a> |
+            <a href="page1.html">Головна</a> |
             <a href="page2.html">Блочні/Інлайн</a> |
             <a href="page3.html">Нормалізація</a> |
             <a href="page4.html">Властивості</a> |
