--- a/page1.html
+++ b/page1.html
@@ -21,6 +21,7 @@
     </header>
     <main>
         <h1>Ця сторінка Войтенка Вадима РПЗ-14.</h1>
+        <img src="./img/pngegg.png" alt="Фото Вадим Войтенко">
     </main>
     <footer>
         <p>© 2025 Мій навчальний сайт</p>
