--- a/page6.html
+++ b/page6.html
@@ -64,7 +64,7 @@
     <header>
         <h1>Overflow</h1>
         <nav>
-            <a href="page1.html">Головна</a> |
+            <a href="index.html">Головна</a> |
             <a href="page2.html">Блочні/Інлайн</a> |
             <a href="page3.html">Нормалізація</a> |
             <a href="page4.html">Властивості</a> |
