--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Приклади Використання &lt;div&gt; та &lt;span&gt;</h1>
         <nav>
-            <a href="page1.html">Головна</a> |
+            <a href="index.html">Головна</a> |
             <a href="page2.html">Блочні/Інлайн</a> |
             <a href="page3.html">Нормалізація</a> |
             <a href="page4.html">Властивості</a> |
